--- a/style.css
+++ b/style.css
@@ -22,6 +22,17 @@
     --stroke-table: #4A808C;
 }
 
+body * {
+    font-family: var(--font-primary);
+    color: var(--font-color);
+}
+
+body {
+    font-size: 1.6rem;
+    background-color: #000;
+    height: 100vh;
+}
+
 .sr-only {
     width: 1px;
     height: 1px;
@@ -35,45 +46,21 @@
     padding: 0;
 }
 
-
-body * {
-    font-family: var(--font-primary);
-    color: var(--font-color);
-}
-
-body {
-    font-size: 1.6rem;
-    background-color: #000;
-    height: 100vh;
-
-    display: grid;
-    align-items: center;
-}
-
-
-#app {
-    width: 100%;
-    max-width: 1000px;
-
-    height: 100%;
-    max-height: 700px;
-
-    padding: 4rem 2rem;
-    margin: 0 auto;
-
-    display: flex;
-    flex-direction: column;
-    gap: 4rem;
+.app {
+   padding: 2rem;
+   max-width: 1000px;
+   margin: 0 auto;
 }
 
 header {
-    width: 100%;
     display: flex;
-    height: 5rem;
+    align-items: center;
+    justify-content: space-between;
 
+    margin: 11.5rem 0;
 }
 
-.search  {
+header .search {
     display: flex;
     justify-content: flex-end;
     align-items: center;
@@ -81,71 +68,77 @@ header {
     width: 100%;
 }
 
-.search input, .search button {
+header .search input,
+header .search button{
     border: none;
     border-radius: 5px;
     height: 3.5rem;
     color: white;
 }
 
-.search input {
+header .search input {
     padding: 0 1.6rem;
 
     max-width: 36rem;
     width: 100%;
 
     background-color: var(--blue-500);
-
+    
     font-size: 1.6rem;
 }
 
-.search button  {
+header .search button {
     display: flex;
     align-items: center;
     justify-content: center;
     gap: .8rem;
 
     padding: 0 1.6rem;
-
+    
     background-color: var(--blue-900);
 
     font-weight: bold;
+    text-transform: uppercase;
 
     font-size: 1.4rem;
-
+  
     cursor: pointer;
     transition: .2s;
 }
 
-.search button:hover {
+header .search button:hover {
     background-color: white;
     color: var(--blue-900);
 }
 
-.star:hover {
-    fill: var(--blue-900);
+header .search button svg path{
+    transition: .2s;
 }
 
-table * {
-    color: var(--font-color);
-    font-size: 14rem;
+header .search button:hover svg path {
+    fill: var(--blue-900);
 }
 
 table {
     width: 100%;
-  
+
     text-align: center;
-    
+
     border-collapse: collapse;
     display: flex;
     flex-direction: column;
 }
 
-table thead {
-    background: var(--blue-700);
+table * {
+    color: var(--font-color);
+    font-size: 1.4rem;
 }
 
-table thead th {
+table thead {
+    background-color: var(--blue-700);
+}
+
+table thead th{
     font-weight: 400;
     font-size: 1.4rem;
     padding: 1rem .4rem;
@@ -177,9 +170,160 @@ table tbody {
     position: relative;
 }
 
+table tbody::-webkit-scrollbar {
+    width: 5px;
+}
+  
+  table tbody::-webkit-scrollbar-track {
+    display: none;
+}
+  
+  table tbody::-webkit-scrollbar-thumb {
+    background-color: var(--stroke-table);
+    border-radius: 10px;
+}
+
+table tbody.empty {
+    max-height: unset;
+  }
+
 table tbody tr {
-    display: table;  
+    display: table;
     table-layout: fixed;
     width: 100%;
     height: 7rem;
+}
+
+table tbody td{
+    background-color: var(--blue-300);
+}
+
+table tbody tr:last-child td:first-child{
+    border-bottom-left-radius: 10px;
+}
+  
+  table tbody tr:last-child td:last-child{
+    border-bottom-right-radius: 10px;
+}
+
+table tbody tr:nth-child(even) td{
+    background-color: var(--blue-500);
+    border-top: 1px solid var(--stroke-table);
+    border-bottom: 1px solid var(--stroke-table);
+}
+  
+table tbody tr:last-child td {
+    border-bottom: none;
+}
+
+table tbody td {
+    height: 7rem;
+    padding: 1rem .4rem;
+}
+
+table tbody td.user img {
+    width: 4rem;
+    height: 4rem;
+    object-fit: cover;
+    border-radius: 50%;
+}
+
+a {
+    text-decoration: none;
+    color: var(--font-color);
+}
+
+button {
+    border: none;
+    background: transparent;
+    cursor: pointer;
+}
+
+button.remove {
+    color: var(--btn-remove-color);
+}
+
+
+@media (min-width:350px) {
+    table thead {
+      table-layout: fixed;
+    }
+  }
+  
+  @media (min-width: 500px) {
+  
+    :root {
+      font-size: 70%;
+    }
+  
+    .page {
+      padding: 4rem;
+    }
+  
+    header {
+      justify-content: space-between;
+      gap: 3rem;
+    }
+  
+    header img {
+      display: initial;
+      width: 12rem;
+    }
+  
+    header .inputField input,
+    header .inputField button.addFav {
+      height: 4rem;
+    }
+  
+    table {
+      text-align: left;
+    }
+  
+    table thead th,
+    table tbody td {
+      padding: 1.2rem;
+    }
+  }
+  
+  @media (min-height: 600px) {
+    table tbody {
+      max-height: 350px;
+    }
+  }
+  
+  @media (min-height: 700px) {
+    table tbody {
+      max-height: 420px;
+    }
+  }
+  
+  @media (min-width: 650px) {
+    table tbody td.user {
+      display: flex;
+      align-items: center;
+      gap: 1rem;
+    }
+    
+    table tbody td.user .linkName {
+      display: initial;
+    }
+  
+    table tbody td.user .linkName p {
+      font-weight: bold;
+    }
+  }
+  
+  @media (min-width: 800px) {
+    :root {
+      font-size: 75%;
+    }
+
+    table thead th,
+    table tbody td {
+      padding-left: 2rem;
+    }
+  
+    table tbody td.user {
+      gap: 2rem;
+    }
   }
